--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/content": "3.0.0",
     "@nuxt/eslint": "0.7.4",
     "@nuxt/ui-pro": "3.0.0-alpha.11",
+    "@nuxthub/core": "0.8.12",
     "eslint": "^8.57.0 || ^9.0.0",
     "nuxt": "^3.15.2",
     "rehype-katex": "^7.0.1",
@@ -23,6 +24,7 @@
   },
   "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a",
   "devDependencies": {
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "wrangler": "^3.103.2"
   }
 }
