--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/eslint": "0.7.4",
     "@nuxt/ui-pro": "3.0.0-alpha.11",
     "@nuxthub/core": "0.8.12",
+    "@nuxtjs/seo": "2.1.0",
     "eslint": "^8.57.0 || ^9.0.0",
     "nuxt": "^3.15.2",
     "rehype-katex": "^7.0.1",
