--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/eslint": "1.10.0",
     "@nuxt/ui": "^4.1.0",
     "@nuxtjs/i18n": "^10.2.0",
+    "better-sqlite3": "^12.4.1",
     "eslint": "^9.39.0",
     "nuxt": "4.2.0",
     "rehype-katex": "^7.0.1",
@@ -24,11 +25,13 @@
   },
   "packageManager": "pnpm@10.4.1",
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.72",
     "typescript": "^5.9.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
+      "better-sqlite3",
       "esbuild",
       "unrs-resolver",
       "vue-demi"
